--- a/src/components/PiaConversation/PiaConversationStyles.css
+++ b/src/components/PiaConversation/PiaConversationStyles.css
@@ -66,7 +66,7 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  padding: 16px 20px 20px;
+  padding: 16px 0 20px;
 }
 
 .cio-pia-modal-body .cio-pia-conversation {
@@ -78,4 +78,13 @@
 .cio-pia-modal-body .cio-pia-conversation-history {
   max-height: none;
   flex: 1;
+  padding: 0 20px;
+}
+
+.cio-pia-modal-body .cio-pia-conversation-footer {
+  padding: 0 20px;
+}
+
+.cio-pia-modal-body .cio-pia-title {
+  padding: 0 20px;
 }
